--- a/src/fe/features/pages/codeholders/style.less
+++ b/src/fe/features/pages/codeholders/style.less
@@ -1081,6 +1081,10 @@
             margin-left: 8px;
         }
     }
+
+    .edit-note {
+        font-size: smaller;
+    }
 }
 
 .codeholders-task-add-role {
